# slang-factory

./: .gitignore  CMakeLists.txt  README.md  run.bat
demo/: slang_factory_demo.cpp
demo/render_demo/: main.cpp  vulkan_renderer.cpp  vulkan_renderer.h
include/helpers/: shader_request.h  slang_compiler.h  slang_reflection_dumper.h  slang_reflection_extractor.h
include/slang_factory/: slang_factory.h  slang_shader_builder.h
shaders/: example.slang
src/: main.cpp  slang_compiler.cpp  slang_factory.cpp  slang_reflection_dumper.cpp  slang_reflection_extractor.cpp  slang_shader_builder.cpp
